# Building-DeepSeek-R1

./: .gitignore  .pre-commit-config.yml  README.md  compare_two_stage.py  config.py  data_prep.py  dataset_preparation.py  fine_tuning.py  fine_tuning_qlora.py  fine_tuning_seed.py  inference.py  main.py  model_inference.py  model_initialization.py  model_setup.py  plot_results.py  pyproject.toml  reinforcement_training.py  requirements.txt  reward_functions.py  reward_metrics.py  run_two_stage_ft_qlora.py  settings.py  train_grpo.py  train_sft.py
